Updated header styles to prevent wrapping or extending beyond page boundary

--- a/src/common/styles/_common.scss
+++ b/src/common/styles/_common.scss
@@ -28,6 +28,9 @@ h5,
 h6 {
   margin: 20px 0 10px;
   color: $heading;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 table {
